[package]
name = "chatterverse_fakeyou"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
derive_builder = {version = "0.12.0", optional = true}
reqwest = {version = "0.11", features = ["cookies", "json"]}
serde = {version="1.0", features= ["derive"]}
serde_json = "1.0"
thiserror = "1.0.40"
uuid = {version = "1.4.1", features=["fast-rng", "serde", "v4"] }

[features]
default = ["tts"] 
tts = []
data = []
media = []
face_animator = ["media", "dep:derive_builder"]